--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,29 @@
+*{
+  margin: 0;
+  padding: 0;
+}
 .App {
   text-align: center;
+ 
+  
+}
+
+/* width */
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: rgb(182, 174, 255);
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: rgb(138, 104, 170);
 }
