--- a/src/Pages/Landing/Landing.css
+++ b/src/Pages/Landing/Landing.css
@@ -23,3 +23,11 @@
     padding:10px;
     text-decoration:none;
 }
+.pageName{
+    justify-self: center;
+    margin-left: 20px;
+    margin-top: 10px;
+    color: crimson;
+    font-family: 'Lora','Sarif';
+    font-size: 40px;
+}
