--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,17 @@
  
   
 }
+.helpButton{
+    position: fixed;
+    right: 0;
+    bottom: 0;
+    margin-bottom: 10px;
+    margin-right: 10px;
+}
+.modalStyle{
+  width: fit-content;
+  height: fit-content;
+}
 
 /* width */
 ::-webkit-scrollbar {
