--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -27,6 +27,13 @@
     text-decoration: none;   
     font-size: 60px;
 }
+.menu{
+    color: red;
+    font-size: 20px;
+    font-weight: bold;
+    margin-left: 2cm;
+    
+}
 
 
 
